[workspace]
members = [".", "examples/web/dj8-wasm/"]

[package]
name = "dj8"
version = "0.202105.2"
authors = ["fuyutarow <fuyutarow@gmail.com>"]
edition = "2018"

[lib]
name = "cli"
path = "src/lib/mod.rs"

[dependencies]
ghakuf = "0.5.6"
serde_json = "1.0.64"
structopt = "0.3.21"
strum = "0.20.0"
strum_macros = "0.20.1"
anyhow = "1.0.40"
enum-utils = "0.1.2"
parse-display = "0.4.1"
midir = "0.7.0"
num-traits = "0.2.14"
enum-primitive-derive = "0.2.1"
abc-parser = "0.2.0"
nom = "6.1.2"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.3"
priority-queue = "1.1.1"
itertools = "0.10.0"
synthrs = { git = "https://github.com/gyng/synthrs" }
rodio = { version = "0.13.1", default-features = false }
cpal = "0.13.3"

[features]
mp3 = ["rodio/mp3"]
wasm-bindgen = ["cpal/wasm-bindgen", "rodio/wasm-bindgen"]
